updated home about contact with footer and gif

--- a/about.html
+++ b/about.html
@@ -31,13 +31,31 @@
     </div>
     </main>
 <body>
-   <div class="column-one">
-       <h2>Column 1</h2>
-       <p class="div.a">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, eveniet!</p>
-   </div>
-   <div class="column-two">
-       <h2>Column 2</h2>
-       <p class="div.b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum nisi sed dicta, quo aut numquam eum, repudiandae, aspernatur blanditiis sunt, aliquam possimus reprehenderit tempore? Tempora odit distinctio, minima exercitationem nemo!</p>
-   </div>
+   <section class="main-body">
+        <div class="about-col">
+            <h1>Reprogram your brain!</h1>
+            <img class="gif"> <iframe src="https://giphy.com/embed/l378xauX4ScdqvOKc" width="400" height="250" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/lego-ninjago-movie-l378xauX4ScdqvOKc">via GIPHY</a></p>
+        </div>
+        
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores sint consequatur libero aliquid saepe quasi officiis iure praesentium? Deleniti, facere.</p>
+        </div>
+    </section>
+<footer class="footer">
+      <div class="footer-col"> 
+        <a href="contact.html"><button class="footer-btn">Connect With Me</button></a>
+      </div>
+      <div class="footer-col"> 
+        <div class="icons-wrap">
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fab fa-facebook-f fa-2x"></i>
+          <a href="https://www.twitter.com/" target="_blank"><i class=" icon fab fa-twitter fa-2x"></i>
+          <a href="https://www.foursquare.com/" target="_blank"><i class="icon fab fa-foursquare fa-2x"></i></a>
+        </div>>
+      </div>
+      <div class="footer-col"> 
+        <p class="copyright">&copy Website by Jason Combs</p>
+      </div>
+</footer>
 </body>
 </html>
