--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
     </nav>
 </head>
 <!--============Banner Section=============-->
-<main>
+<body>
+    <main>
         <!--====Start of Banner====-->
         <div class="banner">
         <img src="../img/sunset.jpg">
@@ -35,7 +36,7 @@
         <div class="contact-col" id="form">
             <iframe height="578" allowTransparency="true"
                 frameborder="0" scrolling="no"
-                style="width:400; border:none" src="https://jcombs6.wufoo.com/embed/z1pooivo0nib5zj/">
+                style="width:300; border:none" src="https://jcombs6.wufoo.com/embed/z1pooivo0nib5zj/">
                 <a href="https://jcombs6.wufoo.com/forms/z1pooivo0nib5zj/">
                 Fill out my Wufoo form!
                 </a>
@@ -48,9 +49,23 @@
             </div>
     </div>
     <div class="contact-col-one">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.7563482432824!2d-119.79143268507555!3d36.84831097993865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8094681df688aa95%3A0x49d915a352be1b3b!2sYard+House!5e0!3m2!1sen!2sus!4v1529973191318" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.7563482432824!2d-119.79143268507555!3d36.84831097993865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8094681df688aa95%3A0x49d915a352be1b3b!2sYard+House!5e0!3m2!1sen!2sus!4v1529973191318" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
-<body>
-    
+    </main>
+<footer class="footer">
+      <div class="footer-col"> 
+        <a href="contact.html"><button class="footer-btn">Connect With Me</button></a>
+      </div>
+      <div class="footer-col"> 
+        <div class="icons-wrap">
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fab fa-facebook-f fa-2x"></i>
+          <a href="https://www.twitter.com/" target="_blank"><i class=" icon fab fa-twitter fa-2x"></i>
+          <a href="https://www.foursquare.com/" target="_blank"><i class="icon fab fa-foursquare fa-2x"></i></a>
+        </div>>
+      </div>
+      <div class="footer-col"> 
+        <p class="copyright">&copy Website by Jason Combs</p>
+      </div>
+    </footer>
 </body>
 </html>
