--- a/index.html
+++ b/index.html
@@ -35,23 +35,32 @@
     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam non, perspiciatis ex iure magni aspernatur laboriosam eaque adipisci nam ab dignissimos quos unde esse quam, reiciendis natus! Commodi aliquid provident, eaque quia. Aperiam voluptas ipsa provident at odio nulla, voluptates quis exercitationem id nam esse dolores accusantium illo obcaecati dolorem!</p>-->
     <section>
         <div class="row">
-            <div class="column-one" style="background-color: #8080ff;">
-                <img class="flower" src="../img/flower.jpg">
+            <div class="column one" style="background-color: #8080ff;">
+                <img class=image src="../img/Direction.jpg">
             </div>
-            <div class="column-two" style="background-color: #8080ff;">
+            <div class="column two" style="background-color: #8080ff;">
                 <h2>Column 2</h2>
-                <p class="div.b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur magnam vitae repudiandae consectetur dolor officia laborum eveniet eum explicabo quibusdam.</p>
+                <p class="div.b">Mindfulness is the psychological process of bringing one's attention to experiences occurring in the present moment,which can be developed through the practice of meditation and other training.The term "mindfulness” correlates with the Pali term sati, which is a significant element of Buddhist traditions. In Buddhist teachings, mindfulness is utilized to develop self-knowledge and wisdom that gradually lead to what is described as enlightenment or the complete freedom from suffering.</p>
+                <p>In mindfulness meditation, once you establish concentration, you observe the flow of inner thoughts, emotions, and bodily sensations without judging them as good or bad. Pay attention. You also notice external sensations such as sounds, sights, and touch that make up your moment-to-moment experience.</p>
             </div>
         </div>
     </section>
 <!--=====================Footer Begins====================-->
 <footer class="footer">
-    <div class="footer-col">
-        <button class=footer-button>Click me</button>
-    </div>
-    <a href="https://www.facebook.com/" target="_blank"><i class="icon fab fa-facebook fa-2x"></i></div></a>
-    <div class="footer-col"></div>
-</footer>
+      <div class="footer-col"> 
+        <a href="contact.html"><button class="footer-btn">Connect With Me</button></a>
+      </div>
+      <div class="footer-col"> 
+        <div class="icons-wrap">
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fab fa-facebook-f fa-2x"></i>
+          <a href="https://www.twitter.com/" target="_blank"><i class=" icon fab fa-twitter fa-2x"></i>
+          <a href="https://www.foursquare.com/" target="_blank"><i class="icon fab fa-foursquare fa-2x"></i></a>
+        </div>>
+      </div>
+      <div class="footer-col"> 
+        <p class="copyright">&copy Website by Jason Combs</p>
+      </div>
+    </footer>
 <!--=====================Footer Ends======================-->
 </body>
 </html>
